apps/front-end/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  selector:
    app: front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
