apps/front-end/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end
spec:
  ingressClassName: nginx
  rules:
    - host: PLACEHOLDER.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
